--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "ethers": "^5.5.4",
     "express": "^4.17.3",
     "node-fetch": "^3.2.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
